# git-find-uncommited

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: cargo-build-release.yml  docker-image.yml
src/: main.rs
