[package]
name = "git-find-uncommited"
version = "0.1.0"
edition = "2021"
authors = ["Björn Busse <bj.rn@baerlin.eu>"]
license = "BSD-3-Clause"
licence-file = "LICENSE"
repository = "https://github.com/bbusse/git-find-uncommited"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
